<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <GVL Name="GVL_Devices" Id="{cb7cf638-cc80-4f58-a532-470704faedf8}">
    <Declaration><![CDATA[VAR_GLOBAL
	//XRT M1
	HOMS1_Pitch	    :	HOMS_PitchMechanism := (
		ReqPosLimHi := 310,
		ReqPosLimLo := -410,
		diEncPosLimHi := 11269000,
		diEncPosLimLo := 10859000
	);
	HOMS1_YGantry	:	HOMS_Gantry;
	HOMS1_XGantry	:	HOMS_Gantry;
	HOMS1_Bender	:	ST_HOMSStepper;

	//XRT M2
	HOMS2_Pitch	    : HOMS_PitchMechanism := (
		ReqPosLimHi := 1000,
		ReqPosLimLo := -860,
		diEncPosLimHi := 10349000,
		diEncPosLimLo := 9349000
	);
	HOMS2_YGantry	: HOMS_Gantry;
	HOMS2_XGantry	: HOMS_Gantry;
	HOMS2_Bender	:	ST_HOMSStepper;
	
	//XRT M3
	HOMS3_Pitch	    : HOMS_PitchMechanism := (
		ReqPosLimHi := 440,
		ReqPosLimLo := -350,
		diEncPosLimHi := 9391800,
		diEncPosLimLo := 8945700
	);
	HOMS3_YGantry	: HOMS_Gantry;
	HOMS3_XGantry	: HOMS_Gantry;
	HOMS3_Bender	:	ST_HOMSStepper;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>