<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="PiezoSerial" Id="{04ed9258-9624-4f29-9f34-d3e5ff9995d6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PiezoSerial
VAR
	//PI Serial
	fbE621SerialDriverM1 : FB_PI_E621_SerialDriver;
	fbE621SerialDriverM2 : FB_PI_E621_SerialDriver;
	fbE621SerialDriverM3 : FB_PI_E621_SerialDriver;
	rtInitParams	:	R_TRIG;
	tonTimeoutRstM1	: TON := (PT:=T#2S); //For timeout reset
	tonTimeoutRstM2	: TON := (PT:=T#2S); //For timeout reset
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//M1 Piezo E-621
///////////////////////
	fbE621SerialDriverM1.i_xExecute := TRUE;
	fbE621SerialDriverM1.i_xExecute R= fbE621SerialDriverM1.q_xDone;
	fbE621SerialDriverM1(
		iq_stPiezoAxis:= HOMS1_Pitch.Piezo, 
		iq_stSerialRXBuffer:= Serial_P1_SerialRXBuffer, 
		iq_stSerialTXBuffer:= Serial_P1_SerialTXBuffer);
	
//M2 Piezo E-621
///////////////////////
	fbE621SerialDriverM2.i_xExecute := TRUE;
	fbE621SerialDriverM2.i_xExecute R= fbE621SerialDriverM2.q_xDone;
	fbE621SerialDriverM2(
		iq_stPiezoAxis:= HOMS2_Pitch.Piezo, 
		iq_stSerialRXBuffer:= Serial_P2_SerialRXBuffer, 
		iq_stSerialTXBuffer:= Serial_P2_SerialTXBuffer);
		
//M3 Piezo E-621
///////////////////////
	fbE621SerialDriverM3.i_xExecute := TRUE;
	fbE621SerialDriverM3.i_xExecute R= fbE621SerialDriverM3.q_xDone;
	fbE621SerialDriverM3(
		iq_stPiezoAxis:= HOMS3_Pitch.Piezo, 
		iq_stSerialRXBuffer:= Serial_P3_SerialRXBuffer, 
		iq_stSerialTXBuffer:= Serial_P3_SerialTXBuffer);
]]></ST>
    </Implementation>
    <LineIds Name="PiezoSerial">
      <LineId Id="67" Count="6" />
      <LineId Id="79" Count="8" />
      <LineId Id="98" Count="8" />
      <LineId Id="88" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>